src/sass/layout/_about.scss
/* ... */
.section-about__button--icon {
  fill: var(--btn-first-color);

  margin-top: 3px;
  margin-left: 10px;
}

// ______________АНИМАЦИИ

.animation {
  &.section-about {
    background-size: 100%;
    -webkit-animation: scale 700ms linear;
    animation: scale 700ms linear;

    @-webkit-keyframes scale {
      0% {
        background-size: 200%;
      }
      100% {
        background-size: 100%;
      }
    }

    @keyframes scale {
      0% {
        background-size: 200%;
      }
      100% {
        background-size: 100%;
      }
    }
  }
}

.section-about__image-thumb {
  @media screen and (min-width: 1280px) {
    position: relative;
    z-index: 0;
    &:hover,
    &:focus {
      -webkit-animation: swing;
      animation: swing;
      -webkit-animation-duration: 700ms;
      animation-duration: 700ms;

      &::after {
        display: block;
        opacity: 100%;
      }
    }

    &::after {
      content: '';
      display: none;

      position: absolute;
      width: 516px;
      height: 516px;
      top: 0;
      left: 0;
      z-index: 999;

      background-image: url(../images/desktop/myy.png);

      background-repeat: no-repeat;
      background-position: right -2px bottom 140px;
      background-size: 38%;

      opacity: 0%;

      -webkit-animation: rubberBand 800ms linear;

      animation: rubberBand 800ms linear;
    }
  }
}

// ____________Бекдроп и модальное окно

.section-about__backdrop {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9998;

  width: 100%;
  height: 100%;

  background-image: url(../images/desktop/milk-modal-bottom.png);

  background-repeat: no-repeat;
  background-position: bottom;
  background-size: contain;

  background-color: var(--footer-bg-color);

  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-property: -webkit-transform opacity visibility;
  transition-property: -webkit-transform opacity visibility;
  -o-transition-property: transform opacity visibility;
  transition-property: transform opacity visibility;
  transition-property: transform opacity visibility, -webkit-transform opacity visibility;
  -webkit-transition-duration: 250ms;
  -o-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  -o-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);

  overflow-y: scroll;

  &.is-hidden-modal {
    pointer-events: none;
    visibility: hidden;
    opacity: 0;

    -webkit-transform: scale(0);

    -ms-transform: scale(0);

    transform: scale(0);
    -webkit-transition-property: -webkit-transform opacity visibility;
    transition-property: -webkit-transform opacity visibility;
    -o-transition-property: transform opacity visibility;
    transition-property: transform opacity visibility;
    transition-property: transform opacity visibility, -webkit-transform opacity visibility;
    -webkit-transition-duration: 250ms;
    -o-transition-duration: 250ms;
    transition-duration: 250ms;
    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    -o-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  }
}

.section-about__backdrop {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9998;

  width: 100%;
  height: 100%;

  background-image: url(../images/desktop/milk-modal-bottom.png);

  background-repeat: no-repeat;
  background-position: bottom;
  background-size: contain;

  background-color: var(--footer-bg-color);

  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-property: -webkit-transform opacity visibility;
  transition-property: -webkit-transform opacity visibility;
  -o-transition-property: transform opacity visibility;
  transition-property: transform opacity visibility;
  transition-property: transform opacity visibility, -webkit-transform opacity visibility;
  -webkit-transition-duration: 250ms;
  -o-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  -o-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);

  overflow-y: scroll;

  &.is-hidden-modal {
    pointer-events: none;
    visibility: hidden;
    opacity: 0;

    -webkit-transform: scale(0);

    -ms-transform: scale(0);

    transform: scale(0);
    -webkit-transition-property: -webkit-transform opacity visibility;
    transition-property: -webkit-transform opacity visibility;
    -o-transition-property: transform opacity visibility;
    transition-property: transform opacity visibility;
    transition-property: transform opacity visibility, -webkit-transform opacity visibility;
    -webkit-transition-duration: 250ms;
    -o-transition-duration: 250ms;
    transition-duration: 250ms;
    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    -o-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  }
}

.section-about__modal-close {
  position: absolute;
  right: 10px;
  top: 10px;
  z-index: 9999;

  font-size: 20px;

  display: -webkit-box;

  display: -ms-flexbox;

  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;

  background-color: var(--white-color);
  color: var(--btn-first-color);
  text-align: center;

  cursor: pointer;

  width: 25px;
  height: 25px;

  border-radius: 50%;

  &:hover,
  &:hover {
    background-color: var(--btn-first-color);
    color: var(--white-color);
  }
}
/* ... */

